--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -11,9 +11,10 @@ $big-margin: 1rem;
 // Element heights & widths
 $header-height: 5rem;
 $footer-height: 2rem;
-$scrollbar-width: 0.6rem;
+$scrollbar-width: 0.4rem;
+$scrollbar-height: 0.4rem;
 $tab-height: 2.4rem;
-$formula-preview-height: 4rem;
+$formula-preview-height: 5rem;
 $min-popup-form-width: 36.25rem;
 
 // Fonts
