bug-8: fix table styles

--- a/src/pages/propositions/elements/direct-proofs-editor/styles.scss
+++ b/src/pages/propositions/elements/direct-proofs-editor/styles.scss
@@ -3,6 +3,10 @@
 @import 'styles/fonts.scss';
 
 .direct-proofs-editor {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
   &__table {
     margin-bottom: $big-margin;
 
