--- a/src/pages/propositions/elements/direct-proofs-editor/styles.scss
+++ b/src/pages/propositions/elements/direct-proofs-editor/styles.scss
@@ -1,14 +1,23 @@
 @import 'styles/sizes.scss';
 @import 'styles/mixins/scrollbar-styles.scss';
 @import 'styles/fonts.scss';
+@import 'styles/z-indexes.scss';
 
 .direct-proofs-editor {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  position: relative;
+  width: 100%;
 
   &__table {
-    margin-bottom: $big-margin;
+    position: absolute;
+    width: 100%;
+    margin-bottom: 1rem;
+    max-height: 78%;
+    height: 78%;
+    display: flex;
+    overflow: auto;
+    flex-direction: column;
+    align-items: flex-start;
+    @include scrollbar-styles(light);
 
     td.table__cell {
       font-family: $Monospace;
@@ -22,6 +31,11 @@
   }
 
   &__toolbar {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    z-index: $panel-z-index;
+
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(4, 1fr);
@@ -33,5 +47,12 @@
 
   &__filler {
     margin-top: $big-margin;
+  }
+
+  // Dark styles
+  &_dark {
+    .direct-proofs-editor__table {
+      @include scrollbar-styles(dark);
+    }
   }
 }
