--- a/src/pages/propositions/styles.scss
+++ b/src/pages/propositions/styles.scss
@@ -23,10 +23,11 @@
     }
 
     .tab-list__content {
-      min-height: 92%;
       display: flex;
-      justify-content: center;
+      justify-content: start;
       border-bottom: none;
+      padding-bottom: 0;
+      height: 92%;
     }
   }
 }
