--- a/src/components/tooltip/styles.scss
+++ b/src/components/tooltip/styles.scss
@@ -1,13 +1,11 @@
 @import 'styles/colors.scss';
 @import 'styles/sizes.scss';
 @import 'styles/z-indexes.scss';
-@import 'styles/animations/pop-in-modal.scss';
 
 .tooltip {
   position: relative;
 
   &__container {
-    display: none;
     position: absolute;
     z-index: $tooltip-z-index;
     border-radius: $border-radius;
@@ -15,7 +13,7 @@
     background-color: $light-font-color;
     color: $light-background-color;
     padding: $small-padding;
-    @include pop-in-modal();
+    opacity: 0.6;
 
     top: -38px;
 
