--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -16,6 +16,7 @@ $scrollbar-height: 0.4rem;
 $tab-height: 2.4rem;
 $formula-preview-height: 4.4rem;
 $min-popup-form-width: 36.25rem;
+$max-tooltip-width: 20rem;
 
 // Fonts
 $base-font-size: 1.2rem;
