ts-67: add the positioning prop

--- a/src/components/tooltip/styles.scss
+++ b/src/components/tooltip/styles.scss
@@ -11,20 +11,24 @@
   }
 
   &__container {
-    display: block;
     position: absolute;
     max-width: $max-tooltip-width;
     max-height: $max-tooltip-width;
     overflow: auto;
-    top: 100%;
-    left: 100%;
     z-index: $tooltip-z-index;
     border-radius: $border-radius;
     font-size: $tiny-font-size;
     background-color: $light-font-color;
     color: $light-background-color;
     padding: $small-padding * 2 $small-padding;
-
     opacity: 0.8;
+
+    &_bottom {
+      top: 100%;
+    }
+
+    &_top {
+      bottom: 100%;
+    }
   }
 }
