ts-68: add a tooltip for the IC form

--- a/src/components/tooltip/styles.scss
+++ b/src/components/tooltip/styles.scss
@@ -20,6 +20,7 @@
     z-index: $tooltip-z-index;
     border-radius: $border-radius;
     font-size: $tiny-font-size;
+    white-space: pre-wrap;
     padding: $small-padding * 2 $small-padding;
     opacity: 0.8;
     // Light colors
