ts-68: modify the tooltip component

--- a/src/components/tooltip/styles.scss
+++ b/src/components/tooltip/styles.scss
@@ -36,6 +36,10 @@
     }
   }
 
+  &__icon {
+    text-decoration: none;
+  }
+
   &_dark {
     text-decoration: underline dotted $dark-weak-accent-color;
 
