ts-68: add a new icon

--- a/src/components/modal-window/styles.scss
+++ b/src/components/modal-window/styles.scss
@@ -33,6 +33,7 @@
     // Basic styles
     width: fit-content;
     height: fit-content;
+    z-index: $modal-z-index;
     max-width: 80%;
     max-height: 80%;
     min-width: 20%;
