ts-68: add new tooltips to the component

--- a/src/components/tooltip/styles.scss
+++ b/src/components/tooltip/styles.scss
@@ -23,7 +23,7 @@
     font-size: $tiny-font-size;
     white-space: pre-wrap;
     padding: $small-padding * 2 $small-padding;
-    // opacity: 0.8;
+    opacity: 0.8;
     // Light colors
     background-color: $light-font-color;
     color: $light-background-color;
