--- a/src/pages/propositions/elements/natural-proofs-editor/styles.scss
+++ b/src/pages/propositions/elements/natural-proofs-editor/styles.scss
@@ -1,7 +1,7 @@
 @import 'styles/sizes.scss';
 @import 'styles/mixins/scrollbar-styles.scss';
 @import 'styles/fonts.scss';
-@import 'styles/z-indexes.scss';
+@import 'styles/mixins/page-styles.scss';
 
 .natural-proofs-editor {
   position: relative;
@@ -31,18 +31,7 @@
   }
 
   &__toolbar {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    z-index: $panel-z-index;
-
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(7, 1fr);
-    column-gap: $default-margin;
-    row-gap: $big-margin;
-    align-items: center;
-    justify-items: center;
+    @include toolbar-styles(2, 7);
   }
 
   &__filler {
