ts-71: adjust styles for the dark mode

--- a/src/components/controls/formula/styles.scss
+++ b/src/components/controls/formula/styles.scss
@@ -10,8 +10,12 @@
   }
 
   &__indentation {
-    background-color: $light-font-color;
+    background-color: $light-strong-accent-color;
     margin-right: $default-margin;
+
+    &_dark {
+      background-color: $dark-strong-accent-color;
+    }
   }
 
   &__operator {
