bug-9: adjust form styles for small screens

--- a/src/styles/mixins/form-styles.scss
+++ b/src/styles/mixins/form-styles.scss
@@ -3,6 +3,7 @@
 @mixin propositionsFormStyles() {
   padding: $default-padding;
   min-width: $min-popup-form-width;
+  overflow-x: hidden;
 
   &__input {
     margin: $big-padding 0;
