--- a/src/pages/propositions/elements/direct-proofs-editor/styles.scss
+++ b/src/pages/propositions/elements/direct-proofs-editor/styles.scss
@@ -1,4 +1,5 @@
 @import 'styles/sizes.scss';
+@import 'styles/colors.scss';
 @import 'styles/mixins/scrollbar-styles.scss';
 @import 'styles/fonts.scss';
 @import 'styles/mixins/page-styles.scss';
@@ -11,8 +12,8 @@
     position: absolute;
     width: 100%;
     margin-bottom: 1rem;
-    max-height: 78%;
-    height: 78%;
+    max-height: 70%;
+    height: 70%;
     display: flex;
     overflow: auto;
     flex-direction: column;
@@ -32,6 +33,7 @@
 
   &__toolbar {
     @include toolbar-styles(2, 4);
+    background-color: $light-background-color;
   }
 
   &__filler {
@@ -42,6 +44,9 @@
   &_dark {
     .direct-proofs-editor__table {
       @include scrollbar-styles(dark);
+    }
+    .direct-proofs-editor__table {
+      background-color: $dark-background-color;
     }
   }
 }
