--- a/src/pages/propositions/elements/direct-proofs-editor/styles.scss
+++ b/src/pages/propositions/elements/direct-proofs-editor/styles.scss
@@ -9,26 +9,8 @@
   width: 100%;
 
   &__table {
-    position: absolute;
-    width: 100%;
-    margin-bottom: 1rem;
-    max-height: 70%;
-    height: 70%;
-    display: flex;
-    overflow: auto;
-    flex-direction: column;
-    align-items: flex-start;
     @include scrollbar-styles(light);
-
-    td.table__cell {
-      font-family: $Monospace;
-    }
-
-    & > table > tbody > tr > td:nth-child(3n) {
-      text-align: left;
-      max-width: 51vw;
-      overflow-x: auto;
-    }
+    @include proof-table-styles();
   }
 
   &__toolbar {
