--- a/src/styles/mixins/page-styles.scss
+++ b/src/styles/mixins/page-styles.scss
@@ -15,3 +15,25 @@
   justify-items: center;
   padding-top: $default-padding;
 }
+
+@mixin proof-table-styles() {
+  position: absolute;
+  width: 100%;
+  margin-bottom: 1rem;
+  max-height: 70%;
+  height: 70%;
+  display: flex;
+  overflow: auto;
+  flex-direction: column;
+  align-items: flex-start;
+
+  td.table__cell {
+    font-family: $Monospace;
+  }
+
+  & > table > tbody > tr > td:nth-child(3n) {
+    text-align: left;
+    max-width: 51vw;
+    overflow-x: auto;
+  }
+}
