bug-10: add max-popup-height variable

--- a/src/components/propositions/popups/confirm-delete/styles.scss
+++ b/src/components/propositions/popups/confirm-delete/styles.scss
@@ -5,6 +5,7 @@
   min-width: $min-popup-form-width;
   display: flex;
   flex-direction: column;
+  max-height: $max-popup-height;
 
   &__text {
     margin-bottom: $default-margin * 2;
