--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -17,6 +17,7 @@ $tab-height: 2.4rem;
 $formula-preview-height: 4.4rem;
 $min-popup-form-width: 38rem;
 $max-tooltip-width: 20rem;
+$max-popup-height: 30rem;
 
 // Fonts
 $base-font-size: 1.2rem;
