ts-72: fix the toolbar height

--- a/src/pages/propositions/styles.scss
+++ b/src/pages/propositions/styles.scss
@@ -30,4 +30,10 @@
       height: 90%;
     }
   }
+
+  @media (min-height: $min-big-screen-height) {
+    .tab-list__content {
+      height: 92%;
+    }
+  }
 }
