--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -17,6 +17,7 @@ $tab-height: 2.4rem;
 $formula-preview-height: 4.4rem;
 $min-popup-form-width: 38rem;
 $max-tooltip-width: 20rem;
+$max-toolbar-height: 6.75rem;
 $max-popup-height: 30rem;
 
 // Fonts
@@ -28,3 +29,4 @@ $tiny-font-size: 0.8rem;
 $max-mobile-width: 500px;
 $max-table-width: 768px;
 $max-small-screen-width: 1208px;
+$min-big-screen-height: 768px;
