--- a/src/styles/mixins/page-styles.scss
+++ b/src/styles/mixins/page-styles.scss
@@ -1,4 +1,5 @@
 @import 'styles/z-indexes.scss';
+@import 'styles/sizes.scss';
 
 @mixin toolbar-styles($rows, $columns) {
   position: absolute;
@@ -20,8 +21,8 @@
   position: absolute;
   width: 100%;
   margin-bottom: 1rem;
-  max-height: 70%;
-  height: 70%;
+  max-height: calc(100% - $max-toolbar-height);
+  height: calc(100% - $max-toolbar-height);
   display: flex;
   overflow: auto;
   flex-direction: column;
