ts-76: replace scss variables

--- a/src/components/controls/formula-preview/styles.scss
+++ b/src/components/controls/formula-preview/styles.scss
@@ -1,5 +1,5 @@
-@import 'styles/colors.scss';
-@import 'styles/sizes.scss';
+@import 'styles/variables/colors.scss';
+@import 'styles/variables/sizes.scss';
 @import 'styles/mixins/scrollbar-styles.scss';
 
 .formula-preview {
