--- a/src/components/modal-window/styles.scss
+++ b/src/components/modal-window/styles.scss
@@ -1,6 +1,6 @@
-@import 'styles/z-indexes.scss';
-@import 'styles/colors.scss';
-@import 'styles/sizes.scss';
+@import 'styles/variables/z-indexes.scss';
+@import 'styles/variables/colors.scss';
+@import 'styles/variables/sizes.scss';
 @import 'styles/mixins/text-styles.scss';
 @import 'styles/mixins/theme-colors.scss';
 @import 'styles/mixins/scrollbar-styles.scss';
