--- a/src/components/sidebar/styles.scss
+++ b/src/components/sidebar/styles.scss
@@ -1,4 +1,4 @@
-@import 'styles/colors.scss';
+@import 'styles/variables/colors.scss';
 @import 'styles/animations/slide-in-right.scss';
 @import 'styles/animations/slide-out-right.scss';
 
