--- a/src/components/tab-list/styles.scss
+++ b/src/components/tab-list/styles.scss
@@ -1,6 +1,6 @@
-@import 'styles/colors.scss';
-@import 'styles/sizes.scss';
-@import 'styles/z-indexes.scss';
+@import 'styles/variables/colors.scss';
+@import 'styles/variables/sizes.scss';
+@import 'styles/variables/z-indexes.scss';
 
 .tab-list {
   &__tabs {
