--- a/src/components/controls/select/styles.scss
+++ b/src/components/controls/select/styles.scss
@@ -1,5 +1,5 @@
-@import 'styles/colors.scss';
-@import 'styles/sizes.scss';
+@import 'styles/variables/colors.scss';
+@import 'styles/variables/sizes.scss';
 @import 'styles/mixins/text-styles.scss';
 @import 'styles/mixins/input-styles.scss';
 @import 'styles/mixins/theme-colors.scss';
