--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1,5 +1,5 @@
-@import 'styles/colors.scss';
-@import 'styles/sizes.scss';
+@import 'styles/variables/colors.scss';
+@import 'styles/variables/sizes.scss';
 
 .header {
   display: grid;
