--- a/src/components/layout/styles.scss
+++ b/src/components/layout/styles.scss
@@ -1,7 +1,7 @@
 @import 'styles/fonts.scss';
-@import 'styles/colors.scss';
-@import 'styles/sizes.scss';
-@import 'styles/z-indexes.scss';
+@import 'styles/variables/colors.scss';
+@import 'styles/variables/sizes.scss';
+@import 'styles/variables/z-indexes.scss';
 @import 'styles/mixins/theme-colors.scss';
 @import 'styles/mixins/scrollbar-styles.scss';
 
