--- a/src/components/navigation/styles.scss
+++ b/src/components/navigation/styles.scss
@@ -1,6 +1,6 @@
-@import 'styles/colors.scss';
-@import 'styles/z-indexes.scss';
-@import 'styles/sizes.scss';
+@import 'styles/variables/colors.scss';
+@import 'styles/variables/z-indexes.scss';
+@import 'styles/variables/sizes.scss';
 @import 'styles/mixins/text-styles.scss';
 @import 'styles/animations/slide-in-left.scss';
 @import 'styles/animations/slide-out-left.scss';
