--- a/src/components/table/styles.scss
+++ b/src/components/table/styles.scss
@@ -1,5 +1,5 @@
-@import 'styles/sizes.scss';
-@import 'styles/colors.scss';
+@import 'styles/variables/sizes.scss';
+@import 'styles/variables/colors.scss';
 @import 'styles/fonts.scss';
 @import 'styles/mixins/scrollbar-styles.scss';
 
