--- a/src/pages/propositions/tabs/natural-proofs-editor/styles.scss
+++ b/src/pages/propositions/tabs/natural-proofs-editor/styles.scss
@@ -1,4 +1,4 @@
-@import 'styles/sizes.scss';
+@import 'styles/variables/sizes.scss';
 @import 'styles/mixins/scrollbar-styles.scss';
 @import 'styles/fonts.scss';
 @import 'styles/mixins/page-styles.scss';
