--- a/src/styles/mixins/page-styles.scss
+++ b/src/styles/mixins/page-styles.scss
@@ -1,5 +1,5 @@
-@import 'styles/z-indexes.scss';
-@import 'styles/sizes.scss';
+@import 'styles/variables/z-indexes.scss';
+@import 'styles/variables/sizes.scss';
 
 @mixin toolbar-styles($rows, $columns) {
   position: absolute;
