--- a/src/styles/mixins/scrollbar-styles.scss
+++ b/src/styles/mixins/scrollbar-styles.scss
@@ -1,5 +1,5 @@
-@import '../colors.scss';
-@import '../sizes.scss';
+@import '../variables/colors.scss';
+@import '../variables/sizes.scss';
 
 @mixin scrollbar-styles($mode) {
   // Chrome, Safari
