ts-77: update disabled button styles

--- a/src/components/controls/button/styles.scss
+++ b/src/components/controls/button/styles.scss
@@ -119,6 +119,7 @@
 
   // Disabled styles
   &_disabled {
-    @include input-disabled-styles();
+    opacity: 0.7;
+    cursor: not-allowed;
   }
 }
