--- a/src/components/controls/button/styles.scss
+++ b/src/components/controls/button/styles.scss
@@ -120,6 +120,6 @@
   // Disabled styles
   &_disabled {
     opacity: 0.7;
-    cursor: not-allowed;
+    cursor: url('../../../assets/icons/ban-solid.svg'), not-allowed;
   }
 }
