--- a/src/pages/propositions/styles.scss
+++ b/src/pages/propositions/styles.scss
@@ -1,7 +1,7 @@
 @import 'styles/variables/sizes.scss';
 @import 'styles/mixins/text-styles.scss';
 
-.propositions {
+.propositions-direct-proofs {
   height: 100%;
   display: grid;
   grid-template-rows: 20px auto;
