--- a/src/components/navigation/styles.scss
+++ b/src/components/navigation/styles.scss
@@ -26,6 +26,14 @@
     }
   }
 
+  &__nested-list {
+    list-style: none;
+    text-align: center;
+    li {
+      font-size: $tiny-font-size;
+    }
+  }
+
   // Small screen styles
   @media (max-width: $max-small-screen-width) {
     li {
