--- a/src/components/navigation/styles.scss
+++ b/src/components/navigation/styles.scss
@@ -28,7 +28,8 @@
 
   &__nested-list {
     list-style: none;
-    text-align: left;
+    text-align: center;
+    padding: 0;
     li {
       font-size: $tiny-font-size;
     }
