--- a/src/components/navigation/styles.scss
+++ b/src/components/navigation/styles.scss
@@ -30,6 +30,7 @@
     list-style: none;
     text-align: center;
     padding: 0;
+    border: $light-border;
     li {
       font-size: $tiny-font-size;
     }
@@ -39,6 +40,12 @@
   @media (max-width: $max-small-screen-width) {
     li {
       font-size: $base-font-size;
+    }
+  }
+
+  &_dark {
+    .navigation__nested-list {
+      border: $dark-border;
     }
   }
 }
