ts-82: add mock data

--- a/src/components/navigation/styles.scss
+++ b/src/components/navigation/styles.scss
@@ -37,7 +37,7 @@
     align-items: center;
     margin: 0.6rem auto 0 auto;
     li {
-      font-size: $tiny-font-size;
+      font-size: $small-font-size;
       padding: 0.6rem;
     }
   }
