--- a/src/components/sidebar/styles.scss
+++ b/src/components/sidebar/styles.scss
@@ -1,4 +1,5 @@
 @import 'styles/variables/colors.scss';
+@import 'styles/variables/sizes.scss';
 @import 'styles/animations/slide-in-right.scss';
 @import 'styles/animations/slide-out-right.scss';
 
@@ -7,5 +8,18 @@
 
   &_closing {
     @include slide-out-right();
+  }
+
+  &__list {
+    list-style: none;
+    padding: 0;
+    li {
+      margin-bottom: 1rem;
+    }
+  }
+
+  &__button-span {
+    font-size: $small-font-size;
+    padding-left: 0.6rem;
   }
 }
