--- a/src/styles/variables/sizes.scss
+++ b/src/styles/variables/sizes.scss
@@ -18,6 +18,7 @@ $formula-preview-height: 4.4rem;
 $min-popup-form-width: 38rem;
 $max-toolbar-height: 6.75rem;
 $max-popup-height: 30rem;
+$min-error-popup-width: 26rem;
 
 // Fonts
 $base-font-size: 1.2rem;
