--- a/src/pages/propositions/tabs/natural-proofs/rules/styles.scss
+++ b/src/pages/propositions/tabs/natural-proofs/rules/styles.scss
@@ -1,2 +1,23 @@
+@import 'styles/variables/sizes.scss';
+@import 'styles/variables/colors.scss';
+@import 'styles/fonts.scss';
+
 .natural-proofs-rules {
+  margin: 0 auto;
+  border-collapse: collapse;
+
+  th h3 {
+    text-shadow: $light-text-shadow;
+  }
+
+  td {
+    text-align: center;
+    border: $light-weak-border;
+    padding: $default-padding;
+  }
+
+  .katex {
+    font-family: $Regular;
+    line-height: normal;
+  }
 }
