ts-99: add dark styles for np rules

--- a/src/pages/propositions/tabs/natural-proofs/rules/styles.scss
+++ b/src/pages/propositions/tabs/natural-proofs/rules/styles.scss
@@ -20,4 +20,14 @@
     font-family: $Regular;
     line-height: normal;
   }
+
+  &__dark {
+    th h3 {
+      text-shadow: $dark-text-shadow;
+    }
+
+    td {
+      border: $dark-weak-border;
+    }
+  }
 }
