ts-99: add styles for NP definitions

--- a/src/pages/propositions/tabs/direct-proofs/definitions/styles.scss
+++ b/src/pages/propositions/tabs/direct-proofs/definitions/styles.scss
@@ -28,7 +28,10 @@
   }
 
   &__centered {
-    text-align: center;
+    margin: $default-margin auto;
+    padding: $default-padding;
+    width: fit-content;
+    border: $light-weak-border;
   }
 
   .katex {
