ts-99: implement dark styles for heuristics

--- a/src/pages/propositions/tabs/natural-proofs/heuristics/styles.scss
+++ b/src/pages/propositions/tabs/natural-proofs/heuristics/styles.scss
@@ -14,13 +14,23 @@
     color: $light-strong-accent-color;
   }
 
+  .katex {
+    font-family: $Regular;
+    line-height: normal;
+    text-shadow: $light-text-shadow;
+  }
+
   li {
     margin-bottom: $default-margin;
+  }
+
+  &__dark {
+    abbr {
+      color: $dark-strong-accent-color;
+    }
 
     .katex {
-      font-family: $Regular;
-      line-height: normal;
-      text-shadow: $light-text-shadow;
+      text-shadow: $dark-text-shadow;
     }
   }
 }
