--- a/src/components/navigation/styles.scss
+++ b/src/components/navigation/styles.scss
@@ -7,6 +7,10 @@
 
 .navigation {
   @include slide-in-left();
+  position: absolute;
+  left: 0;
+  top: $header-height;
+
   &_closing {
     @include slide-out-left();
   }
