--- a/src/styles/variables/sizes.scss
+++ b/src/styles/variables/sizes.scss
@@ -4,6 +4,7 @@ $border-radius: 0.4rem;
 $default-padding: 0.6rem;
 $small-padding: 0.4rem;
 $big-padding: 1.2rem;
+$page-padding: 2.6rem;
 $default-margin: 0.4rem;
 $small-margin: 0.2rem;
 $big-margin: 1rem;
@@ -21,6 +22,7 @@ $max-popup-height: 30rem;
 $min-error-popup-width: 26rem;
 
 // Fonts
+$header-font-size: 2rem;
 $base-font-size: 1.2rem;
 $small-font-size: 1rem;
 $tiny-font-size: 0.8rem;
