ts-103: update footer styles

--- a/src/components/layout/styles.scss
+++ b/src/components/layout/styles.scss
@@ -34,7 +34,7 @@
   &__main {
     grid-area: page-content;
     overflow: auto;
-    padding: $big-padding;
+    padding: $big-padding $page-padding;
   }
 
   &__navigation {
