--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -3,45 +3,19 @@
 
 .footer {
   font-size: $small-font-size;
-  display: grid;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  grid-template-areas: 'footer-copyright . footer-links';
-  grid-template-columns: 2fr auto 2fr;
-
-  &__copyright {
-    grid-area: footer-copyright;
-    padding-left: $block-gap;
-  }
+  padding: 0 $page-padding;
 
   &__links {
-    grid-area: footer-links;
-    justify-self: right;
-    padding-right: $block-gap;
+    display: flex;
+    gap: $block-gap;
+
     @include link-styles(light);
 
     &_dark {
       @include link-styles(dark);
     }
-
-    a {
-      margin-left: $big-margin;
-    }
-  }
-
-  // Small screen styles
-  @media (max-width: $max-small-screen-width) {
-    grid-template-columns: 0.5fr 5fr 5fr 0.5fr;
-  }
-
-  // Tablet screen styles
-  @media (max-width: $max-table-width) {
-    grid-template-columns: 0.2fr 5fr 5fr 0.2fr;
-    font-size: $tiny-font-size;
-  }
-
-  // Mobile screen styles
-  @media (max-width: $max-mobile-width) {
-    grid-template-columns: 0.1fr 5fr 5fr 0.1fr;
-    font-size: $tiny-font-size;
   }
 }
