--- a/src/components/navigation/styles.scss
+++ b/src/components/navigation/styles.scss
@@ -10,6 +10,8 @@
   position: absolute;
   left: 0;
   top: $header-height;
+  background-color: $light-background-color;
+  z-index: $sidebar-z-index;
 
   &_closing {
     @include slide-out-left();
@@ -54,6 +56,7 @@
   }
 
   &_dark {
+    background-color: $dark-background-color;
     .navigation__nested-list {
       border: $dark-border;
     }
