--- a/src/styles/variables/z-indexes.scss
+++ b/src/styles/variables/z-indexes.scss
@@ -1,4 +1,6 @@
 $base-z-index: 1;
 $panel-z-index: 2;
-$modal-z-index: 3;
-$spinner-z-index: 4;
+$sidebar-z-index: 3;
+$header-z-index: 4;
+$modal-z-index: 5;
+$spinner-z-index: 6;
