ts-104: Update header buttons view

--- a/src/components/controls/button/styles.scss
+++ b/src/components/controls/button/styles.scss
@@ -133,7 +133,7 @@
 
     .button__front {
       background: transparent;
-      border: $light-weak-border;
+      // border: $light-weak-border;
       &:hover,
       &:active,
       &:focus {
