ts-104: Update the tablist component

--- a/src/components/tab-list/styles.scss
+++ b/src/components/tab-list/styles.scss
@@ -10,6 +10,12 @@
     gap: $default-margin;
   }
 
+  &__tools {
+    display: flex;
+    gap: $default-margin;
+    margin-left: auto;
+  }
+
   &__tab {
     cursor: pointer;
     position: relative;
