ts-105: update unit tests

--- a/src/pages/propositions/toolbar/styles.scss
+++ b/src/pages/propositions/toolbar/styles.scss
@@ -3,7 +3,7 @@
 @import 'styles/animations/slide-in-right.scss';
 @import 'styles/animations/slide-out-right.scss';
 
-.sidebar {
+.propositions-toolbar {
   @include slide-in-right();
 
   &_closing {
