--- a/src/styles/mixins/page-styles.scss
+++ b/src/styles/mixins/page-styles.scss
@@ -51,6 +51,7 @@
     font-size: $tiny-font-size;
     padding: 0;
     text-align: right;
+    margin-right: 1rem;
 
     &::before {
       margin-right: $default-margin;
