ts-107: update toolbar styles

--- a/src/pages/propositions/toolbar/styles.scss
+++ b/src/pages/propositions/toolbar/styles.scss
@@ -1,4 +1,21 @@
+@import 'styles/variables/colors.scss';
+@import 'styles/variables/z-indexes.scss';
+@import 'styles/variables/sizes.scss';
+@import 'styles/mixins/text-styles.scss';
+@import 'styles/animations/slide-in-left.scss';
+@import 'styles/animations/slide-out-left.scss';
+
 .propositions-toolbar {
+  position: absolute;
+  right: 0;
+  top: 30%;
+  background-color: $light-background-color;
+  z-index: $sidebar-z-index;
+  min-width: 18rem;
+  padding: $big-padding;
+  border-bottom-left-radius: $border-radius;
+  box-shadow: $light-box-shadow;
+
   &__list {
     list-style: none;
     padding: 0;
